--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.2.8",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -27,7 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "style": "sass --watch src/styles/application.scss src/App.css"
+    "style": "sass --watch src/styles/application.scss src/App.css",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
